# The-Spiral-Language

./: .gitattributes  .gitignore  CHANGELOG  CHANGELOG.txt  LICENSE  LICENSE.txt  The Spiral Language.sln  bug.md  changelog_v0.1.md  publish.ps1  readme (for v2).md  readme.md  regret_matching_perf_comparison.md
Benchmarking/: AssemblyInfo.fs  Benchmarking.fsproj  (+6 more)
Spiral Compilation Tests/cuda_experiments/ml2/: error.txt  package-lock.json  package.json  package.spiproj  pickler.spi  pyproject.toml  serializer_gpu_test.spi
Spiral Compilation Tests/cuda_experiments/ml2/corebase/: arraym.spi  base.spi  console.spi  core.spi  listm.spi  loop.spi  pickler.py  pickler.spi  real_core.spir  refm.spi  sa_listm.spi  sam.spi
Spiral Compilation Tests/cuda_experiments/ml2/corebase/serializer/: seriazer_main.py  seriazer_main.spi  utils.py  utils.spir
Spiral Compilation Tests/cuda_experiments/ml2/corebase/tensorm/: partitionm.spi  printing.spi  tensor_main.spi  utils.spir
Spiral Compilation Tests/cuda_experiments/ml2/corecuda/: base.spi  cooperative_groups.spi  pipeline.spi  random.spi  sa_listm.spi  sam.py  sam.spi  semaphore.spi  sortm.spi  tensor_cuda.spi
Spiral Compilation Tests/cuda_experiments/ml2/corepython/: jsonm.py  jsonm.spi
Spiral Compilation Tests/cuda_experiments/ml2/game/: hand_scorer.spi  hand_scorer_old.spi
Spiral Compilation Tests/cuda_experiments/ml2/ml/: backprop.spi  primitives.py
Spiral Compilation Tests/cuda_experiments/ml2/rps_ui/: pyproject.toml
Spiral Compilation Tests/cuda_experiments/ml2/ui/: package.json  pyproject.toml  tsconfig.json
(+2822 files in other folders)
