[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["mrakgr <mrakgr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-socketio = "^5.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
