[tool.poetry]
name = "ui"
version = "0.1.0"
description = ""
authors = ["mrakgr <mrakgr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
cupy-cuda12x = "^13.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
